--- a/parrot.css
+++ b/parrot.css
@@ -137,7 +137,7 @@ article {
 
 footer {
   width: 100%;
-  height: 20px;
+  height: 25px;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -150,6 +150,10 @@ footer a {
 
 footer a:hover {
   text-decoration: underline;
+}
+
+footer img {
+  height: 10px;
 }
 
 @media only screen and (max-width: 980px) {
