Updated parrot list.

--- a/index.mustache
+++ b/index.mustache
@@ -86,7 +86,7 @@
         <hr/>
 
         <a class="button" href="parrots.zip"></a>
-        <p>(zip, 88kb)</p>
+        <p>(zip)</p>
 
         <aside><p>Add them to your Slack. Do it.</p></aside>
 
