Add link to other parrot shirt.

--- a/index.mustache
+++ b/index.mustache
@@ -92,9 +92,15 @@
 
         <hr/>
 
-        <img src="/shirt.jpg" alt=":parrot:" style="width: 50%; min-width: 300px;"/>
-
-        <p><a class="button-small" href="https://cottonbureau.com/products/parrot">Get The Shirt</a></p>
+        <h3>Shirts!</h3>
+        <div class="clearfix">
+          <div class="shirt">
+            <a href="https://cottonbureau.com/products/parrot"><img src="/shirt.jpg" alt=":parrot:" /></a>
+          </div>
+          <div class="shirt">
+            <a href="https://teespring.com/partyparrot"><img src="/glasses-shirt.png" alt=":partyparrot:" /></a>
+          </div>
+        </div>
 
         <hr/>
 
