--- a/index.mustache
+++ b/index.mustache
@@ -108,6 +108,7 @@
           <a class="button-small" href="parrot.svg">SVG</a>
           <a class="button-small" href="https://github.com/jmhobbs/terminal-parrot">Terminal</a>
           <a class="button-small" href="https://github.com/jmhobbs/cultofthepartyparrot.com">GitHub</a>
+          <a class="button-small" href="https://github.com/Shrugs/partyparrot">Text-To-Parrots</a>
         </p>
         
         <hr/>
