Add link to iOS sticker pack. #44

--- a/index.mustache
+++ b/index.mustache
@@ -104,6 +104,13 @@
 
         <hr/>
 
+        <h3>Sticker Packs!</h3>
+        <div class="clearfix">
+          <a href="https://itunes.apple.com/us/app/cult-of-the-party-parrot/id1169278591?ls=1&mt=8"><img src="app-store-badge.svg" alt="Download on the App Store" /></a>
+        </div>
+
+        <hr/>
+
         <p>
           <a class="button-small" href="parrot.svg">SVG</a>
           <a class="button-small" href="https://github.com/jmhobbs/cultofthepartyparrot.com">GitHub</a>
