Align keyboard app store logos.

--- a/index.mustache
+++ b/index.mustache
@@ -5,7 +5,7 @@
     <title>Cult of the Party Parrot</title>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="parrot.css?v=6">
+    <link rel="stylesheet" href="parrot.css?v=7">
 
     <meta property="og:title" content="Cult of the Party Parrot" />
     <meta property="og:type" content="website" />
@@ -104,9 +104,10 @@
 
         <hr/>
 
-        <h3>Sticker Packs!</h3>
-        <div class="clearfix">
+        <h3>Keyboards!</h3>
+        <div class="clearfix keyboards">
           <a href="https://itunes.apple.com/us/app/cult-of-the-party-parrot/id1169278591?ls=1&mt=8"><img src="app-store-badge.svg" alt="Download on the App Store" /></a>
+          <a href="https://play.google.com/store/apps/details?id=us.fetch321.partyparrotkeyboard"><img src="google-play-badge.png" alt="Download on Google Play" /></a>
         </div>
 
         <hr/>
