--- a/index.mustache
+++ b/index.mustache
@@ -123,6 +123,7 @@
           <a class="button-small" href="https://github.com/jmhobbs/terminal-parrot">Terminal</a>
           <a class="button-small" href="https://github.com/Shrugs/partyparrot">Text-To-Parrots</a>
           <a class="button-small" href="http://countryparrots.com/">Country Parrots</a>
+          <a class="button-small" href="https://github.com/francoislg/PPaaS">Party Parrot as a Service</a>
         </p>
         
         <hr/>
