--- a/templates/index.html
+++ b/templates/index.html
@@ -102,6 +102,12 @@
           </div>
         </div>
 
+        <hr class="thin" />
+
+        <p>
+          <a class="button-small" href="https://www.redbubble.com/people/korben-dallas/collections/621063-party-parrot-collection">Redbubble</a>
+        </p>
+
         <hr/>
 
         <h3>Keyboards!</h3>
@@ -124,6 +130,7 @@
           <a class="button-small" href="https://github.com/Shrugs/partyparrot">Text-To-Parrots</a>
           <a class="button-small" href="http://countryparrots.com/">Country Parrots</a>
           <a class="button-small" href="https://parrotify.github.io/">Party Parrot as a Service</a>
+          <a class="button-small" href="https://www.reddit.com/r/PartyParrot">r/PartyParrot</a>
         </p>
         
         <hr/>
