Party Parrot Wants Your Soul
Closes #99

--- a/templates/index.html
+++ b/templates/index.html
@@ -188,6 +188,8 @@
         }
         trackLinkClickEvent("parrots_zip", "parrots.zip");
         trackLinkClickEvent("parrot_svg", "parrot.svg");
+
+        if(window.console && window.console.log) { console.log("PARTY PARROT WANTS YOUR SOUL: http://codepen.io/codevinsky/full/LWprYo/"); }
       </script>
     </div>
   </body>
