Add link to PartyParrots on MacBook Touch Bar

--- a/templates/index.html
+++ b/templates/index.html
@@ -132,6 +132,10 @@
           <a class="button-small" href="https://parrotify.github.io/">Party Parrot as a Service</a>
           <a class="button-small" href="https://www.reddit.com/r/PartyParrot">r/PartyParrot</a>
         </p>
+
+        <p>
+          <a class="button-small" href="https://github.com/mjaniszew/osx-touchbar-party-parrot">PartyParrot on MacBook's Touch Bar</a>
+        </p>
         
         <hr/>
         
