Add link to @matheuss parrotsay command.

--- a/templates/index.html
+++ b/templates/index.html
@@ -131,10 +131,8 @@
           <a class="button-small" href="http://countryparrots.com/">Country Parrots</a>
           <a class="button-small" href="https://parrotify.github.io/">Party Parrot as a Service</a>
           <a class="button-small" href="https://www.reddit.com/r/PartyParrot">r/PartyParrot</a>
-        </p>
-
-        <p>
           <a class="button-small" href="https://github.com/mjaniszew/osx-touchbar-party-parrot">PartyParrot on MacBook's Touch Bar</a>
+          <a class="button-small" href="https://github.com/matheuss/parrotsay">Parrot Say</a>
         </p>
         
         <hr/>
