Add link to the Party Parrot Bot

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
         <div>
           <h1>Cult of the Party Parrot</h1>
         </div>
-       
+
         <table>
           <tr>
             <td><img src="/parrots/parrot.gif" /></td>
@@ -133,10 +133,11 @@
           <a class="button-small" href="https://www.reddit.com/r/PartyParrot">r/PartyParrot</a>
           <a class="button-small" href="https://github.com/mjaniszew/osx-touchbar-party-parrot">PartyParrot on MacBook's Touch Bar</a>
           <a class="button-small" href="https://github.com/matheuss/parrotsay">Parrot Say</a>
+          <a class="button-small" href="https://t.me/PartyParrotBot">Party Bot</a>
         </p>
-        
+
         <hr/>
-        
+
         <p>
           Party Parrot based on <a href="https://www.youtube.com/watch?v=9T1vfsHYiKY">Sirocco</a>, the hardest partying parrot ever.
         </p>
