--- a/templates/index.html
+++ b/templates/index.html
@@ -98,6 +98,9 @@
             <a href="https://cottonbureau.com/products/parrot"><img src="/assets/shirt.jpg" alt=":parrot:" /></a>
           </div>
           <div class="shirt">
+            <a href="https://cottonbureau.com/products/parrot-style"><img src="/assets/style-shirt.jpg" alt=":parrot-vibes:" /></a>
+          </div>
+          <div class="shirt">
             <a href="https://teespring.com/partyparrot"><img src="/assets/glasses-shirt.png" alt=":partyparrot:" /></a>
           </div>
         </div>
