Add link to `fetch-the-parrot`

--- a/templates/index.html
+++ b/templates/index.html
@@ -138,6 +138,7 @@
           <a class="button-small" href="https://github.com/mjaniszew/osx-touchbar-party-parrot">PartyParrot on MacBook's Touch Bar</a>
           <a class="button-small" href="https://github.com/matheuss/parrotsay">Parrot Say</a>
           <a class="button-small" href="https://codepen.io/nathangath/pen/RgvzVY/">CSS Parrot</a>
+          <a class="button-small" href="https://github.com/breadadams/fetch-the-parrot">Fetch-the-parrot</a>
         </p>
 
         <hr/>
