Add 'others' section and zip.

--- a/src/parrot.css
+++ b/src/parrot.css
@@ -49,9 +49,13 @@ ul li img {
 ul li a {
   text-decoration: none;
 }
+p {
+  padding: 0 20px;
+}
 
 @media screen and (min-width: 720px) {
   ul {
+    width: 100%;
     max-width: 800px;
   }
   li {
@@ -322,4 +326,9 @@ span.hd {
   -webkit-animation-duration:1s; 
   -webkit-animation-direction:alternate; 
   -webkit-animation-iteration-count:infinite;	
+}
+
+#other_download {
+ clear: both;
+ margin-top: 16px;
 }
