Add link to parrot.live
Closes #183

--- a/templates/index.html
+++ b/templates/index.html
@@ -164,6 +164,7 @@
           <a class="button-small" href="https://github.com/matheuss/parrotsay">Parrot Say</a>
           <a class="button-small" href="https://codepen.io/nathangath/pen/RgvzVY/">CSS Parrot</a>
           <a class="button-small" href="https://github.com/breadadams/fetch-the-parrot">Fetch-the-parrot</a>
+          <a class="button-small" href="https://twitter.com/hugojmd/status/937997911257882624"><tt>curl parrot.live</tt></a>
         </p>
 
         <hr/>
