--- a/templates/index.html
+++ b/templates/index.html
@@ -165,6 +165,7 @@
           <a class="button-small" href="https://codepen.io/nathangath/pen/RgvzVY/">CSS Parrot</a>
           <a class="button-small" href="https://github.com/breadadams/fetch-the-parrot">Fetch-the-parrot</a>
           <a class="button-small" href="https://twitter.com/hugojmd/status/937997911257882624"><tt>curl parrot.live</tt></a>
+          <a class="button-small" href="https://t.me/PartyParrotBot">Telegram Bot</a>
         </p>
 
         <hr/>
