Link to enamel pins from @brodan

--- a/templates/index.html
+++ b/templates/index.html
@@ -125,6 +125,7 @@
 
         <p>
           <a class="button-small" href="https://www.redbubble.com/people/korben-dallas/collections/621063-party-parrot-collection">Redbubble</a>
+          <a class="button-small" href="http://pingrovepress.storenvy.com/">Enamel Pins</a>
         </p>
 
         <hr/>
