Swap confusing gulp for a big ball of bash.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>Cult of the Party Parrot</title>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/assets/{{assets.parrot_css}}">
+    <link rel="stylesheet" href="{{files.assets__parrot_css}}">
     <link type="text/plain" rel="author" href="humans.txt" />
 
     <meta property="og:title" content="Cult of the Party Parrot" />
@@ -86,7 +86,7 @@
 
         <hr/>
 
-        <a class="button" id="parrots_zip" href="/{{zip}}"></a>
+        <a class="button" id="parrots_zip" href="/{{files.parrots_zip}}"></a>
         <p>(zip)</p>
 
         <aside><p>Add them to your Slack. Do it.</p></aside>
@@ -102,7 +102,7 @@
         </ul>
 
         <div id="other_download">
-          <a class="button-small" id="guests_zip" href="/{{guests_zip}}">Download</a>
+          <a class="button-small" id="guests_zip" href="/{{files.guests_zip}}">Download</a>
         </div>
 
 
