--- a/templates/index.html
+++ b/templates/index.html
@@ -125,19 +125,27 @@
         <h3>Shirts!</h3>
         <div class="clearfix">
           <div class="shirt">
-            <a href="https://cottonbureau.com/products/parrot"><img src="/assets/shirt.jpg" alt=":parrot:" /></a>
-          </div>
-          <div class="shirt">
             <a href="https://cottonbureau.com/products/parrot-style"><img src="/assets/style-shirt.jpg" alt=":parrot-vibes:" /></a>
           </div>
-          <div class="shirt">
+          <div class="shirt donation">
+            <a href="https://teespring.com/partyparrotee"><img src="/assets/crazy-shirt.png" alt=":oh-god-so-many-parrots:" /></a>
+          </div>
+        </div>
+        <div class="clearfix">
+          <div class="shirt out-of-print">
+            <a href="https://cottonbureau.com/products/parrot"><img src="/assets/shirt.jpg" alt=":parrot:" /></a>
+            <div>Out of Print</div>
+          </div>
+          <div class="shirt out-of-print">
             <a href="https://teespring.com/partyparrot"><img src="/assets/glasses-shirt.png" alt=":partyparrot:" /></a>
+            <div>Out of Print</div>
           </div>
         </div>
 
         <hr class="thin" />
 
         <p>
+          <a class="button-small" href="https://teespring.com/partyparrot">Mug</a>
           <a class="button-small" href="https://www.redbubble.com/people/korben-dallas/collections/621063-party-parrot-collection">Redbubble</a>
           <a class="button-small" href="http://pingrovepress.storenvy.com/">Enamel Pins</a>
         </p>
