Added link for parrot.today website.
parrot.today is a website that displays a new random parrot every single
day.

--- a/templates/index.html
+++ b/templates/index.html
@@ -191,6 +191,7 @@
           <a class="button-small" href="https://t.me/PartyParrotBot">Telegram Bot</a>
           <a class="button-small" href="https://www.npmjs.com/package/parrotify-cli">parrotify-cli</a>
           <a class="button-small" href="https://github.com/dp12/parrot">emacs parrot</a>
+          <a class="button-small" href="https://parrot.today">parrot.today</a>
         </p>
 
         <hr/>
