Use HD parrots for page decoration.

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,19 +60,19 @@
        
         <table>
           <tr>
-            <td><img src="/parrots/parrot.gif" /></td>
-            <td><img src="/parrots/middleparrot.gif" /><img src="/parrots/middleparrot.gif" /><img src="/parrots/middleparrot.gif" /><img src="/parrots/middleparrot.gif" /><img src="/parrots/middleparrot.gif" /><img src="/parrots/middleparrot.gif" /><img src="/parrots/middleparrot.gif" /><img src="/parrots/middleparrot.gif" /></td>
-            <td><img src="/parrots/rightparrot.gif" /></td>
+            <td><img src="/parrots/hd/parrot.gif" /></td>
+            <td><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /></td>
+            <td><img src="/parrots/hd/reverseparrot.gif" /></td>
           </tr>
           <tr>
-            <td><img src="/parrots/parrot.gif" /></td>
+            <td><img src="/parrots/hd/parrot.gif" /></td>
             <td><h2>PARTY OR DIE</h2></td>
-            <td><img src="/parrots/rightparrot.gif" /></td>
+            <td><img src="/parrots/hd/reverseparrot.gif" /></td>
           </tr>
           <tr>
-            <td><img src="/parrots/parrot.gif" /></td>
-            <td><img src="/parrots/middleparrot.gif" /><img src="/parrots/middleparrot.gif" /><img src="/parrots/middleparrot.gif" /><img src="/parrots/middleparrot.gif" /><img src="/parrots/middleparrot.gif" /><img src="/parrots/middleparrot.gif" /><img src="/parrots/middleparrot.gif" /><img src="/parrots/middleparrot.gif" /></td>
-            <td><img src="/parrots/rightparrot.gif" /></td>
+            <td><img src="/parrots/hd/parrot.gif" /></td>
+            <td><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /></td>
+            <td><img src="/parrots/hd/reverseparrot.gif" /></td>
           </tr>
         </table>
 
@@ -218,7 +218,7 @@
       </article>
 
       <footer>
-        With <img src="/parrots/parrot.gif"> from <a href="http://midwestdevchat.com/">Midwest Dev Chat</a> &amp; <a href="https://github.com/jmhobbs/cultofthepartyparrot.com#thanks">friends</a>
+        With <img src="/parrots/hd/parrot.gif"> from <a href="http://midwestdevchat.com/">Midwest Dev Chat</a> &amp; <a href="https://github.com/jmhobbs/cultofthepartyparrot.com#thanks">friends</a>
       </footer>
 
       <script>
