--- a/templates/flags.html
+++ b/templates/flags.html
@@ -62,7 +62,7 @@
 
         <ul>
           {{#flags}}
-          <li><img src="/flags/{{#hd}}{{{hd}}}{{/hd}}{{^hd}}{{gif}}{{/hd}}" alt="{{name}}"/> {{name}}{{#hd}}<span class="hd">HD</span>{{/hd}}{{#tip}}<span tooltip="{{tip}}">*</span>{{/tip}}</li>
+          <li><img src="/still/flags/{{still}}" class="lazy" data-src="/flags/{{#hd}}{{{hd}}}{{/hd}}{{^hd}}{{gif}}{{/hd}}" alt="{{name}}"/> {{name}}{{#hd}}<span class="hd">HD</span>{{/hd}}{{#tip}}<span tooltip="{{tip}}">*</span>{{/tip}}</li>
           {{/flags}}
         </ul>
 
@@ -78,38 +78,7 @@
       <footer>
         With <img src="/parrots/parrot.gif"> from <a href="http://midwestdevchat.com/">Midwest Dev Chat</a> &amp; <a href="https://github.com/jmhobbs/cultofthepartyparrot.com#thanks">friends</a>
       </footer>
-
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-1664885-25', 'auto');
-        ga('send', 'pageview');
-
-        function trackLinkClickEvent(id, name) {
-          document.getElementById(id).onclick = function (event) {
-            if(false && navigator.sendBeacon != undefined) {
-              ga('send', 'event', 'Link', 'click', name, {transport: 'beacon'});
-            }
-            else {
-              var ran = false,
-                   el = event.srcElement || event.target;
-                 link = e.href,
-             navigate = function() {
-                if (ran) return;
-                ran = true;
-                window.location.href = link;
-              };
-              ga('send', 'event', 'Link', 'click', name, {hitCallback: navigate});
-              setTimeout(navigate, 1000);
-              event.preventDefault ? event.preventDefault() : event.returnValue = !1;
-            }
-          }
-        }
-        trackLinkClickEvent("flags_zip", "flags.zip");
-      </script>
     </div>
+    <script src="{{files.assets__lazy_js}}" defer></script>
   </body>
 </html>
