--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
 
         <ul>
           {{#parrots}}
-          <li><img src="/parrots/{{#hd}}{{{hd}}}{{/hd}}{{^hd}}{{gif}}{{/hd}}" alt="{{name}}"/> {{name}}{{#hd}}<span class="hd">HD</span>{{/hd}}{{#tip}}<span tooltip="{{tip}}">*</span>{{/tip}}</li>
+          <li><img src="/still/parrots/{{still}}" class="lazy" data-src="/parrots/{{#hd}}{{{hd}}}{{/hd}}{{^hd}}{{gif}}{{/hd}}" alt="{{name}}"/> {{name}}{{#hd}}<span class="hd">HD</span>{{/hd}}{{#tip}}<span tooltip="{{tip}}">*</span>{{/tip}}</li>
           {{/parrots}}
         </ul>
 
@@ -113,7 +113,7 @@
 
         <ul>
           {{#guests}}
-          <li><img src="/guests/{{#hd}}{{{hd}}}{{/hd}}{{^hd}}{{gif}}{{/hd}}" alt="{{name}}"/> {{name}}{{#hd}}<span class="hd">HD</span>{{/hd}}{{#tip}}<span tooltip="{{tip}}">*</span>{{/tip}}</li>
+          <li><img src="/still/guests/{{still}}" class="lazy" data-src="/guests/{{#hd}}{{{hd}}}{{/hd}}{{^hd}}{{gif}}{{/hd}}" alt="{{name}}"/> {{name}}{{#hd}}<span class="hd">HD</span>{{/hd}}{{#tip}}<span tooltip="{{tip}}">*</span>{{/tip}}</li>
           {{/guests}}
         </ul>
 
@@ -221,37 +221,8 @@
         With <img src="/parrots/hd/parrot.gif"> from <a href="http://midwestdevchat.com/">Midwest Dev Chat</a> &amp; <a href="https://github.com/jmhobbs/cultofthepartyparrot.com#thanks">friends</a>
       </footer>
 
-      <script>
-        if(window.console && window.console.log) { 
-          console.log("PARTY PARROT WANTS YOUR SOUL: http://codepen.io/codevinsky/full/LWprYo/");
-          if(/Linux/.test(window.navigator.platform)) {
-            console.log("wget https://github.com/jbaublitz/knock-out/archive/master.zip && unzip master.zip && cd knock-out-master && make && sudo insmod parrot.ko && sudo mknod /dev/parrot c \"$(cat /proc/devices | grep parrot |  awk '{print $1}' | tr -d '\\n')\" 0 && cat /dev/parrot");
-          }
-        }
-
-        // Random Flag Parrots
-        fetch('/flags.json').then(function(response) {
-          return response.json();
-        }).then(function(flags) {
-          let keys = Object.keys(flags);
-          shuffle(keys);
-          for(i = 0; i < 6; i++){
-            document.getElementById("flag-" + i).src = "/flags/" + flags[keys[i]].hd;
-          }
-        });
-
-        // https://www.frankmitchell.org/2015/01/fisher-yates/
-        function shuffle (array) {
-          let i = 0, j = 0, temp = null;
-
-          for (i = array.length - 1; i > 0; i -= 1) {
-            j = Math.floor(Math.random() * (i + 1))
-            temp = array[i]
-            array[i] = array[j]
-            array[j] = temp
-          }
-        }
-      </script>
+      <script src="{{files.assets__lazy_js}}" defer></script>
+      <script src="{{files.assets__home_js}}" defer></script>
     </div>
   </body>
 </html>
