Link up gtfoparrot.com, closes #234.

--- a/templates/index.html
+++ b/templates/index.html
@@ -195,6 +195,7 @@
           <a class="button-small" href="https://github.com/dp12/parrot">emacs parrot</a>
           <a class="button-small" href="https://parrot.today">parrot.today</a>
           <a class="button-small" href="https://github.com/jbaublitz/knock-out">Kernel Module</a>
+          <a class="button-small" href="http://www.gtfoparrot.com/">GTFO Parrot</a>
         </p>
 
         <hr/>
