Fixed html templates to make test pass

--- a/templates/index.html
+++ b/templates/index.html
@@ -149,7 +149,7 @@
         <p>
           <a class="button-small" href="https://teespring.com/partyparrot">Mug</a>
           <a class="button-small" href="https://www.redbubble.com/people/korben-dallas/collections/621063-party-parrot-collection">Redbubble</a>
-          <a class="button-small" href="http://pingrovepress.storenvy.com/">Enamel Pins</a>
+          <a class="button-small" href="https://pingrovepress.storenvy.com/">Enamel Pins</a>
         </p>
 
         <hr/>
@@ -182,7 +182,6 @@
         <p>
           <a class="button-small" href="https://github.com/jmhobbs/terminal-parrot">Terminal</a>
           <a class="button-small" href="https://github.com/Shrugs/partyparrot">Text-To-Parrots</a>
-          <a class="button-small" href="http://countryparrots.com/">Country Parrots</a>
           <a class="button-small" href="https://parrotify.github.io/">Party Parrot as a Service</a>
           <a class="button-small" href="https://www.reddit.com/r/PartyParrot">r/PartyParrot</a>
           <a class="button-small" href="https://github.com/mjaniszew/osx-touchbar-party-parrot">PartyParrot on MacBook's Touch Bar</a>
@@ -211,7 +210,7 @@
         </p>
 
         <p>
-          <a class="button-small" href="http://kakaporecovery.org.nz/sirocco/">Donate To Keep Them Partying</a>
+          <a class="button-small" href="https://www.doc.govt.nz/kakapo-recovery">Donate To Keep Them Partying</a>
         </p>
 
         <hr/>
@@ -219,7 +218,7 @@
       </article>
 
       <footer>
-        With <img src="/parrots/hd/parrot.gif"> from <a href="http://midwestdevchat.com/">Midwest Dev Chat</a> &amp; <a href="https://github.com/jmhobbs/cultofthepartyparrot.com#thanks">friends</a>
+        With <img src="/parrots/hd/parrot.gif"> from <a href="https://midwestdevchat.com/">Midwest Dev Chat</a> &amp; <a href="https://github.com/jmhobbs/cultofthepartyparrot.com#thanks">friends</a>
       </footer>
 
       <script src="{{files.assets__lazy_js}}" defer></script>
