Add new parrot tshirt

--- a/templates/index.html
+++ b/templates/index.html
@@ -134,8 +134,8 @@
           </div>
         </div>
         <div class="clearfix">
-          <div class="shirt out-of-print">
-            <a href="https://cottonbureau.com/products/parrot"><img src="/assets/shirt.jpg" alt=":parrot:" /></a>
+          <div class="shirt">
+            <a href="https://www.redbubble.com/people/urielsalis/works/41761140-party-parrot?p=classic-tee"><img src="/assets/shirt.jpg" alt=":parrot:" /></a>
             <div>Out of Print</div>
           </div>
           <div class="shirt out-of-print">
