Remove broken tee spring links.
Closes #467

--- a/templates/index.html
+++ b/templates/index.html
@@ -135,11 +135,11 @@
         </div>
         <div class="clearfix">
           <div class="shirt out-of-print">
-            <a href="https://cottonbureau.com/products/parrot"><img src="/assets/shirt.jpg" alt=":parrot:" /></a>
+            <img src="/assets/shirt.jpg" alt=":parrot:" />
             <div>Out of Print</div>
           </div>
           <div class="shirt out-of-print">
-            <a href="https://teespring.com/partyparrot"><img src="/assets/glasses-shirt.png" alt=":partyparrot:" /></a>
+            <img src="/assets/glasses-shirt.png" alt=":partyparrot:" />
             <div>Out of Print</div>
           </div>
         </div>
